[gd_scene load_steps=26 format=2]

[ext_resource path="res://DialogueBox/DialogueBox.gd" type="Script" id=1]
[ext_resource path="res://Characters/Dad/DAD_ANIMATION_sheet.png" type="Texture" id=2]
[ext_resource path="res://DialogueBox/Control.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/VT323/VT323-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/SFX/UI/Confirm.wav" type="AudioStream" id=5]
[ext_resource path="res://Resources/Voice/Default/Default.wav" type="AudioStream" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 240 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 240 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 96, 240 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 96, 240 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 96, 240 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 96, 240 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 240 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 240 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 96, 240 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 96, 240 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 96, 240 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 96, 240 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 2.2974 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 2.2974, 0.378929, 1 ),
"update": 0,
"values": [ Vector2( 20, 520 ), Vector2( 20, 515 ), Vector2( 20, 505 ), Vector2( 20, 510 ), Vector2( 20, 1000 ) ]
}

[sub_resource type="Animation" id=17]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.353553, 2.2974 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 520 ), Vector2( 20, 1000 ) ]
}

[sub_resource type="Animation" id=18]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2.2974, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.8, 1 ),
"transitions": PoolRealArray( 1, 0.378929, 2.2974, 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 1000 ), Vector2( 20, 510 ), Vector2( 20, 505 ), Vector2( 20, 515 ), Vector2( 20, 520 ) ]
}

[sub_resource type="DynamicFont" id=19]
size = 48
font_data = ExtResource( 4 )

[node name="DialogueBox" type="Panel"]
anchor_top = 0.694
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.32
margin_right = -20.0
margin_bottom = -13.6812
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}
enterAudio = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_top = -1.163
anchor_right = 0.161
anchor_bottom = 0.984
margin_top = -0.0522461
margin_right = 0.360001
margin_bottom = -0.0786743
rect_min_size = Vector2( 200, 400 )
rect_clip_content = true
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
frames = SubResource( 8 )

[node name="Sprite" type="AnimatedSprite" parent="Control"]
position = Vector2( 98.897, 252.114 )
scale = Vector2( 2.35445, 2.35445 )
frames = SubResource( 15 )

[node name="DialogueAnimator" type="AnimationPlayer" parent="."]
anims/slide_down = SubResource( 16 )
anims/slide_down_old = SubResource( 17 )
anims/slide_up = SubResource( 18 )

[node name="DialogueVoicebox" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="DialogueTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="DialogueWrapper" type="VBoxContainer" parent="."]
anchor_left = 0.161
anchor_top = 0.107
anchor_right = 0.948
anchor_bottom = 0.912
margin_left = 0.359985
margin_top = 0.0638885
margin_right = 0.479858
margin_bottom = 0.0772552
rect_min_size = Vector2( 200, 0 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue" type="RichTextLabel" parent="DialogueWrapper"]
margin_right = 975.0
margin_bottom = 150.0
rect_min_size = Vector2( 200, 150 )
rect_clip_content = false
custom_fonts/normal_font = SubResource( 19 )
bbcode_enabled = true
bbcode_text = "this is our effect."
text = "this is our effect."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionAudio" type="AudioStreamPlayer" parent="."]
[connection signal="dialogue_completed" from="." to="." method="_on_DialogueBox_dialogue_completed"]
[connection signal="visibility_changed" from="." to="." method="_on_DialogueBox_visibility_changed"]
[connection signal="animation_finished" from="DialogueAnimator" to="." method="_on_DialogueAnimator_animation_finished"]
[connection signal="timeout" from="DialogueTimer" to="." method="_on_DialogueTimer_timeout"]
